platform/azure/ils-gateway.yaml
# Gateway API configuration for ILS (IBM License Service sidecar on port 8082)
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ils-gateway
  namespace: ${NAMESPACE}
  annotations:
    alb.networking.azure.io/alb-namespace: ${NAMESPACE}   # the ApplicationLoadBalancer is defined in the namespace where ODM is deployed
    alb.networking.azure.io/alb-name: shared-alb
spec:
  gatewayClassName: azure-alb-external
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind : Secret
        group: ""
        name: ibm-usage-metering-instance
---
# HTTPRoute for IBM Licensing Service
# Path /ibm-licensing/* rewritten to /* before forwarding to port 8082
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ils-httproute
  namespace: ${NAMESPACE}
spec:
  parentRefs:
  - name: ils-gateway
    namespace: ${NAMESPACE}
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /ibm-licensing
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: ibm-usage-metering-instance
      port: 8082
