platform/azure/odm-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ${HELM_RELEASE}-odm-gateway
  namespace: ${NAMESPACE}
  annotations:
    alb.networking.azure.io/alb-namespace: ${NAMESPACE}
    alb.networking.azure.io/alb-name: shared-alb
spec:
  gatewayClassName: azure-alb-external
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    # hostname: "${DOMAIN}"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: ${TLS_SECRET}
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${HELM_RELEASE}-odm-httproute
  namespace: ${NAMESPACE}
spec:
  parentRefs:
  - name: ${HELM_RELEASE}-odm-gateway
  hostnames:
  - "${DOMAIN}"
  rules:

  # Decision Server Console - /res
  - matches:
    - path:
        type: PathPrefix
        value: /res
    backendRefs:
    - name: ${HELM_RELEASE}-odm-decisionserverconsole
      port: 443
      weight: 1

  # Decision Center API - /decisioncenter-api
  - matches:
    - path:
        type: PathPrefix
        value: /decisioncenter-api
    backendRefs:
    - name: ${HELM_RELEASE}-odm-decisioncenter
      port: 443
      weight: 1
  
  # Decision Server Runtime - /DecisionService
  - matches:
    - path:
        type: PathPrefix
        value: /DecisionService
    backendRefs:
    - name: ${HELM_RELEASE}-odm-decisionserverruntime
      port: 443
      weight: 1
  
  # Decision Runner - /DecisionRunner
  - matches:
    - path:
        type: PathPrefix
        value: /DecisionRunner
    backendRefs:
    - name: ${HELM_RELEASE}-odm-decisionrunner
      port: 443
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${HELM_RELEASE}-odm-decisioncenter-httproute
  namespace: ${NAMESPACE}
spec:
  parentRefs:
  - name: ${HELM_RELEASE}-odm-gateway
  hostnames:
  - "${DOMAIN}"
  rules:

  # Decision Center - /decisioncenter
  - matches:
    - path:
        type: PathPrefix
        value: /decisioncenter
    backendRefs:
    - name: ${HELM_RELEASE}-odm-decisioncenter
      port: 443
      weight: 1
